fix(sonar): Fix sonar issues